@@ -33,6 +33,8 @@ ikiwiki (2.66) UNRELEASED; urgency=low
   * httpauth: Document that ikiwiki.cgi has to be in a directory subject to
     authentication. Closes: #500524 
   * inline: Fix handling of rootpage that doesn't exist.
+  * attachment: Support adding attachments to pages even as they are being
+    created.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Sep 2008 13:45:55 -0400
 
